Add filters, validation, pagination, lailable

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/css/layouts/basket.css": "/css/layouts/basket.css"
+    "/css/layouts/basket.css": "/css/layouts/basket.css",
+    "/css/layouts/starter-template.css": "/css/layouts/starter-template.css"
 }
